@@ -10,7 +10,7 @@ BEGIN {
 	plan skip_all => "UTF8 tests useless in this ancient perl version";
 	}
     else {
-	plan tests => 57;
+	plan tests => 64;
 	}
     }
 
@@ -20,7 +20,11 @@ BEGIN {
     require "t/util.pl";
     }
 
-my $csv = Text::CSV_XS->new ({ binary => 1, always_quote => 1 });
+my $csv = Text::CSV_XS->new ({
+    binary         => 1,
+    always_quote   => 1,
+    keep_meta_info => 1,
+    });
 
 # Special characters to check:
 # 0A = \n  2C = ,  20 =     22 = "  
@@ -56,4 +60,24 @@ foreach my $test (
     for (0 .. $#in) {
 	is_binary ($in[$_], $out[$_],	"field $_ $msg");
 	}
+    }
+
+# As all utf tests are skipped for older pers, It's safe to use 3-arg open this way
+my $file = "files/utf8.csv";
+SKIP: {
+    open my $fh, "<:encoding(utf8)", $file or
+	skip "Cannot open UTF-8 test file", 6;
+
+    my $row;
+    ok ($row = $csv->getline ($fh), "read/parse");
+
+    is ($csv->is_quoted (0),	1,	"First  field is quoted");
+    is ($csv->is_quoted (1),	0,	"Second field is not quoted");
+    is ($csv->is_binary (0),	1,	"First  field is binary");
+    is ($csv->is_binary (1),	0,	"Second field is not binary");
+
+    ok (utf8::valid ($row->[0]),	"First field is valid utf8");
+
+    $csv->combine (@$row);
+    ok (utf8::valid ($csv->string),	"Combined string is valid utf8");
     }
