@@ -1,3 +1,12 @@
+2008-06-04  0.46 - H.Merijn Brand   <h.m.brand@xs4all.nl>
+
+	* In examples add die on failed close calls
+	* Use Test::MinimumVersion (not distributed)
+	* Added option -F to examples/csv2xls
+	* More source code cleanup
+	* Nailed the UTF-8 issues for parsing
+	* Nailed the UTF-8 issues for combining
+
 2008-04-23  0.45 - H.Merijn Brand   <h.m.brand@xs4all.nl>
 
 	* Forgot to pack examples/parser-xs.pl
